# ha-syncleo

./: .gitignore  .pre-commit-config.yaml  README.md  hacs.json  pyproject.toml  supported_models.md
.github/ISSUE_TEMPLATE/: bug_report.yml  new_device.yml
.github/workflows/: release.yml
custom_components/syncleo/: __init__.py  binary_sensor.py  climate.py  config_flow.py  const.py  entity.py  fan.py  icons.json  manifest.json  models.py  number.py  select.py  sensor.py  strings.json  switch.py  utils.py  water_heater.py
custom_components/syncleo/devices/: __init__.py  air_conditioners.py  boilers.py  breezers.py  heaters.py  kettles.py  profiles.py
custom_components/syncleo/translations/: en.json  ru.json
